--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -23,4 +23,4 @@ $family-primary: $family-serif;
 @import '../../node_modules/bulma/bulma';
 
 // Your code goes here
-@import './components/hello'
+@import './components/hello';
