--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -24,3 +24,7 @@ $family-primary: $family-serif;
 
 // Your code goes here
 @import './components/hello';
+header nav{
+    border-bottom: 2px solid rgba(167, 162, 162, 0.788);
+    background-color: #D42B1E;
+}
